user/astronaut updating | Added Types

--- a/public/locales/cz/translation.json
+++ b/public/locales/cz/translation.json
@@ -9,6 +9,7 @@
     "fName": "Jméno",
     "lName": "Příjmení",
     "haveAccount": "Už máte účet? Přihlašte se.",
+    "birth": "Datum narození",
 
     "astronauts": {
         "tableTitle": "REGISTR ASTRONAUTŮ"
