--- a/public/locales/cz/translation.json
+++ b/public/locales/cz/translation.json
@@ -1,7 +1,9 @@
 {
     "subtitle": "Mezinárodní vesmírný program",
     "emailAdress": "Emailová adresa",
+    "emailExists": "Email je již používán",
     "password": "Heslo",
+    "passError": "Hesla se neshodují",
     "repeatPass": "Opakujte heslo",
     "logInBtn": "Přihlásit",
     "forgotPass": "Zapomenuté heslo?",
